# buildserver

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
cmake/: FindLuaCpp.cmake
dependencies/: update.sh
examples/: CMakeLists.txt  build_on_push.cpp  graph.cpp  lua_services.cpp  lua_services.lua  lua_services2.lua
lua-ideas/: c++-g++.lua  c++-msvc.lua  cmake-exe.lua  find-cmake-unix.lua  find-gcc-unix.lua  find-gcc-win32.lua  find-git-unix.lua  find-git-win32.lua  git-cmake-c++.lua  git-exe.lua  silicium.lua  tutorial.md
lua_wrapper/: CMakeLists.txt  lua_environment.cpp  lua_environment.hpp
nanoweb/: nanoweb.hpp
server/: CMakeLists.txt  buildserver.cpp  buildserver.hpp  cmake.cpp  cmake.hpp  find_cmake.cpp  find_cmake.hpp  find_executable.cpp  find_executable.hpp  find_gcc.cpp  find_gcc.hpp  find_git.cpp  find_git.hpp  graph.hpp
server-cli/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  graph.cpp  language.cpp  lua_wrapper.cpp  main.cpp
test-resources/test1/: CMakeLists.txt  test1.cpp
tyroxx-ci/: CMakeLists.txt  tyroxx-ci.cpp
